apps/peertube/peertube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peertube
  labels:
    app: peertube
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: ALLOWALL";
spec:
  tls:
    - hosts:
        - peertube.example.com
      secretName: peertube-tls
  rules:
    - host: peertube.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: peertube
                port: 
                  number: 9000
